# seek-for-humanoid-server

./: .gitignore  README.md  pyproject.toml
core/: settings.py
humanoids/: urls.py  views.py
humanoids/management/commands/: pullhumanoids.py
humanoids/tests/: mock_data.py  test_api.py  test_command.py
